--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -370,10 +370,10 @@
 		.balkentabelle tbody td.on {
 			background-color: #000;
 		}
-		.balkentabelle tbody tr:nth-child(n + 4) td:nth-child(-n + 12).on {
+		.balkentabelle tbody tr:nth-child(n + 4) td.on {
 			background-color: #666;
 		}
-		.balkentabelle tbody tr:nth-child(1n + 7) td:nth-child(-n + 12).on {
+		.balkentabelle tbody tr:nth-child(1n + 7) td.on {
 			background-color: #999;
 		}
 		.balkentabelle tfoot td {
