Tagesanzeige auf Fibonacci umgestellt

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -367,13 +367,13 @@
 				background-color: inherit;
 				border: none;
 			}
-		.balkentabelle tbody td.on {
+		.balkentabelle tbody td.on {/* ueberschuss */
 			background-color: #000;
 		}
-		.balkentabelle tbody tr:nth-child(n + 4) td.on {
+		.balkentabelle tbody tr:nth-child(n + 4) td.on {/* grundverbrauch ist gedeckt */
 			background-color: #666;
 		}
-		.balkentabelle tbody tr:nth-child(1n + 7) td.on {
+		.balkentabelle tbody tr:nth-child(1n + 7) td.on {/* kruemelkram */
 			background-color: #999;
 		}
 		.balkentabelle tfoot td {
