--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -409,25 +409,26 @@
 			text-align: right;
 			margin-top: 0.5rem;
 			position: relative;
+			padding-right: 2rem;
 		}
 			.schalter span {
 				position: absolute;
 				top: 1.4rem;
 				left: 0rem;
-				width: 5.5rem;
+				width: 9.0rem;
 				text-align: right;
-				font-size: 1.8rem;
+				font-size: 2.8rem;
+				font-weight: bold;
 			}
 			.schalter .ladeleistung {
-				font-size: 1rem;
-				line-height: 2rem;
+				font-size: 1.8rem;
+				line-height: 4.5rem;
 			}
 			.schalter button {
 				border-radius: 1rem;
 				font-size: 5.5rem;
-				min-width: 10rem;
+				min-width: 13rem;
 				border: solid 0.2rem black;
-				margin-left: 0.8rem;
 			}
 			.schalter button.on {
 				background-color: black;
