--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -517,12 +517,12 @@
 <div class="schalter" id="auto_laden">
 	<span onclick="secure_action('change', 'auto', 'change_power')">Auto<br>
 	<span class="ladeleistung" id="auto_ladeleistung"></span></span>
-	<button onclick="refresh('change', 'auto', this.className == 'on' ? 'solar' : 'force', this)">&#9889;&#9889;&#9889;</button>
+	<button onclick="refresh('change', 'auto', this.className == 'on' ? 'solar' : 'force', this)">&#9889;</button>
 </div>
 <div class="schalter" id="roller_laden">
 	<span onclick="secure_action('change', 'roller', 'change_power')">Roller<br>
 	<span class="ladeleistung" id="roller_ladeleistung"></span></span>
-	<button onclick="refresh('change', 'roller', this.className == 'on' ? 'solar' : 'force', this)">&#9889;&#9889;&#9889;</button>
+	<button onclick="refresh('change', 'roller', this.className == 'on' ? 'solar' : 'force', this)">&#9889;</button>
 </div>
 
 </body>
