Fehler bei Roller(aussen) korrigiert; Auto-Ladeleistungs-Umschalter entfernt

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -532,7 +532,7 @@
 <table class="balkentabelle" id="balkenanzeige"></table>
 
 <div class="schalter" id="auto_laden">
-	<span onclick="secure_action('change', 'auto', 'change_power')">Auto<br>
+	<span>Auto<br>
 	<span class="ladeleistung" id="auto_ladeleistung"></span></span>
 	<button onclick="refresh('change', 'auto', this.className == 'on' ? 'solar' : 'force', this)">&#9889;</button>
 </div>
