Anzeige besser formatiert

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -493,6 +493,7 @@
 			}
 	.keller_klima {
 		text-align: center;
+		font-size: 2rem;
 	}
 		.keller_klima span {
 			display: inline-block;
@@ -560,8 +561,7 @@
 </div>
 
 <div class="keller_klima">
-	Temp: <span id="keller_temperatur"></span> &#8451;
-	Hum: <span id="keller_luftfeuchtigkeit"></span> %
+	Keller: <span id="keller_temperatur"></span> &#8451; / <span id="keller_luftfeuchtigkeit"></span> %
 </div>
 
 </body>
