--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -143,6 +143,8 @@
 
 			document.getElementById('keller_temperatur').innerHTML = daten['keller_temperatur'];
 			document.getElementById('keller_luftfeuchtigkeit').innerHTML = daten['keller_luftfeuchtigkeit'];
+			document.getElementById('keller_luft_temperatur').innerHTML = daten['keller_luft_temperatur'];
+			document.getElementById('keller_luft_luftfeuchtigkeit').innerHTML = daten['keller_luft_luftfeuchtigkeit'];
 		}
 		function _setze_ladewunsch(id, typ, timestamp) {
 			var el = document.getElementById(id).getElementsByTagName("button")[0];
@@ -561,7 +563,8 @@
 </div>
 
 <div class="keller_klima">
-	Keller: <span id="keller_temperatur"></span> &#8451; / <span id="keller_luftfeuchtigkeit"></span> %
+	Keller Boden: <span id="keller_temperatur"></span> &#8451; / <span id="keller_luftfeuchtigkeit"></span> %
+	Luft: <span id="keller_luft_temperatur"></span> &#8451; / <span id="keller_luft_luftfeuchtigkeit"></span> %
 </div>
 
 </body>
